--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
 			<artifactId>jopt-simple</artifactId>
 			<version>4.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<version>9.3.0.v20150612</version>
+		</dependency>
 	</dependencies>
 </project>
