servlet webservice replaced with jersey webservice

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jersey.version>2.11</jersey.version>
 	</properties>
 
 	<dependencies>
@@ -34,12 +35,32 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.3.0.v20150612</version>
+			<version>8.1.17.v20150415</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
-			<version>9.3.0.v20150612</version>
+			<version>8.1.17.v20150415</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet-core</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-jetty-http</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson1</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.hk2</groupId>
+			<artifactId>guice-bridge</artifactId>
+			<version>2.3.0-b10</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.inject</groupId>
@@ -57,10 +78,8 @@
 			<version>1.9.13</version>
 		</dependency>
 		<!-- get dnsjava.org from http://www.dnsjava.org and import in your local 
-			maven repository with this command: 
-			mvn install:install-file -Dfile=<path-to-file> 
-			-DgroupId=org.xbill -DartifactId=dnsjava -Dversion=2.1.7 -Dpackaging=jar
-		-->
+			maven repository with this command: mvn install:install-file -Dfile=<path-to-file> 
+			-DgroupId=org.xbill -DartifactId=dnsjava -Dversion=2.1.7 -Dpackaging=jar -->
 		<dependency>
 			<groupId>org.xbill</groupId>
 			<artifactId>dnsjava</artifactId>
