--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,8 @@
 			<artifactId>jackson-mapper-lgpl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
-		<!-- get dnsjava.org from http://www.dnsjava.org and import in your local 
-			maven repository with this command: mvn install:install-file -Dfile=<path-to-file> 
-			-DgroupId=org.xbill -DartifactId=dnsjava -Dversion=2.1.7 -Dpackaging=jar -->
 		<dependency>
-			<groupId>org.xbill</groupId>
+			<groupId>dnsjava</groupId>
 			<artifactId>dnsjava</artifactId>
 			<version>2.1.7</version>
 		</dependency>
