--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,6 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.5</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -81,5 +76,22 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources/react/dist</directory>
+                <targetPath>static/sslReportAppV2</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/resources/static/sslReportApp</directory>
+                <targetPath>static/sslReportApp</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>logback.xml</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 </project>
