--- a/src/main/resources/react/package.json
+++ b/src/main/resources/react/package.json
@@ -24,6 +24,7 @@
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
