--- a/src/main/resources/react/package.json
+++ b/src/main/resources/react/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js --debug",
+    "build": "node ./node_modules/webpack/bin/webpack.js --config webpack.config.js --debug",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -25,13 +25,16 @@
     "path": "^0.12.7",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^3.0.7"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
