--- a/src/main/resources/react/package.json
+++ b/src/main/resources/react/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.2.1"
   }
 }
