--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>de.thiemann</groupId>
     <artifactId>sslreport</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -148,6 +148,7 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>logback.xml</include>
+                    <include>banner.txt</include>
                 </includes>
             </resource>
         </resources>
